directory name has been changed - _ -> asset

--- a/asset/components/sass/_layout.scss
+++ b/asset/components/sass/_layout.scss
@@ -446,7 +446,7 @@ header{
 			
 			@include border-radius(120px);
 			@include background(
-				image-url('asset/profile-pic.jpg')
+				image-url('profile/profile-pic.jpg')
 			);//background
 			width: 12em;
 			height: 12em;
