code for IE background-size: cover effect is added

--- a/asset/components/sass/_layout.scss
+++ b/asset/components/sass/_layout.scss
@@ -45,6 +45,8 @@ header{
 		position:relative;
 		height:100%;
 		width:100%;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-sm.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-sm.jpg', sizingMethod='scale')";
 		
 		span{
 			
@@ -104,6 +106,8 @@ header{
 			background-size:cover;
 			background-position:50% 50%;
 			background-repeat: no-repeat;
+			filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-md.jpg', sizingMethod='scale');
+			-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-md.jpg', sizingMethod='scale')";
 			
 			
 		}
@@ -119,6 +123,8 @@ header{
 			background-size:cover;
 			background-position:50% 50%;
 			background-repeat: no-repeat;
+			filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-lg.jpg', sizingMethod='scale');
+			-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-lg.jpg', sizingMethod='scale')";
 
 			video{
 			
@@ -270,12 +276,16 @@ header{
 	background-size:cover;
 	background-position:50% 50%;
 	background-repeat: no-repeat;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-sm.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-sm.jpg', sizingMethod='scale')";
 	
 	@include at-breakpoint($medium){
 		@include background(image-url('misc/coffee-gray-md.jpg'));
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-md.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-md.jpg', sizingMethod='scale')";
 
 	}//medium size layout
 
@@ -285,6 +295,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-lg.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-lg.jpg', sizingMethod='scale')";
 
 		.layout{
 			
@@ -416,6 +428,8 @@ header{
 	background-size:cover;
 	background-position:50% 50%;
 	background-repeat: no-repeat;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-sm.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-sm.jpg', sizingMethod='scale')";
 	
 	@include at-breakpoint($medium){
 		@include background(
@@ -425,6 +439,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-md.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-md.jpg', sizingMethod='scale')";
 	}
 
 	@include at-breakpoint($medium){
@@ -435,6 +451,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-lg.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-lg.jpg', sizingMethod='scale')";
 	}
 
 	.layout{
@@ -523,6 +541,8 @@ header{
 	background-position:50% 50%;
 	background-size:cover;
 	background-repeat: no-repeat;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-sm.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-sm.jpg', sizingMethod='scale')";
 	
 	@include at-breakpoint($medium){
 		@include background(
@@ -532,6 +552,8 @@ header{
 		);//background
 		background-size:cover;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-md.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-md.jpg', sizingMethod='scale')";
 	}
 	
 	@include at-breakpoint($large){
@@ -542,6 +564,8 @@ header{
 		);//background
 		background-size:cover;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-lg.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-lg.jpg', sizingMethod='scale')";
 
 		.layout{
 			
@@ -1029,6 +1053,8 @@ header{
 	min-height:100%;
 	width:100%;
 	padding-bottom:5em;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-sm.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-sm.jpg', sizingMethod='scale')";
 
 	@include at-breakpoint($medium){
 		@include background(
@@ -1038,6 +1064,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-md.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-md.jpg', sizingMethod='scale')";
 	}
 
 	@include at-breakpoint($large){
@@ -1048,6 +1076,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-lg.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-lg.jpg', sizingMethod='scale')";
 	}
 
 	.layout{
@@ -1157,6 +1187,8 @@ header{
 	background-size:cover;
 	background-position:50% 50%;
 	background-repeat: no-repeat;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-sm.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-sm.jpg', sizingMethod='scale')";
 	
 	@include at-breakpoint($medium){
 		@include background(
@@ -1166,6 +1198,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-md.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-md.jpg', sizingMethod='scale')";
 	}
 	
 	@include at-breakpoint($large){
@@ -1176,6 +1210,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-lg.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-lg.jpg', sizingMethod='scale')";
 	}
 
 	h2{
@@ -1224,6 +1260,8 @@ header{
 	background-size:cover;
 	background-position:50% 50%;
 	background-repeat: no-repeat;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-sm.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-sm.jpg', sizingMethod='scale')";
 	
 	@include at-breakpoint($medium){
 		@include background(
@@ -1233,6 +1271,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-md.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-md.jpg', sizingMethod='scale')";
 	}
 
 	@include at-breakpoint($large){
@@ -1243,6 +1283,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-lg.jpg', sizingMethod='scale');
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-lg.jpg', sizingMethod='scale')";
 	}
 
 	h2{
