display:block element is added to all the background images for IE

--- a/asset/components/sass/_layout.scss
+++ b/asset/components/sass/_layout.scss
@@ -47,7 +47,8 @@ header{
 		width:100%;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-sm.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-sm.jpg', sizingMethod='scale')";
-		
+		background-color:transparent;
+		display:block;
 		span{
 			
 			font-size:0.7em;
@@ -108,7 +109,8 @@ header{
 			background-repeat: no-repeat;
 			filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-md.jpg', sizingMethod='scale');
 			-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-md.jpg', sizingMethod='scale')";
-			
+			background-color:transparent;
+			display:block;
 			
 		}
 		@include at-breakpoint($large){
@@ -125,7 +127,8 @@ header{
 			background-repeat: no-repeat;
 			filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-lg.jpg', sizingMethod='scale');
 			-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/building-lg.jpg', sizingMethod='scale')";
-
+			background-color:transparent;
+			display:block;
 			video{
 			
 				display:block;
@@ -278,7 +281,8 @@ header{
 	background-repeat: no-repeat;
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-sm.jpg', sizingMethod='scale');
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-sm.jpg', sizingMethod='scale')";
-	
+	background-color:transparent;
+	display:block;
 	@include at-breakpoint($medium){
 		@include background(image-url('misc/coffee-gray-md.jpg'));
 		background-size:cover;
@@ -286,7 +290,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-md.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-md.jpg', sizingMethod='scale')";
-
+		background-color:transparent;
+		display:block;
 	}//medium size layout
 
 
@@ -297,7 +302,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-lg.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-gray-lg.jpg', sizingMethod='scale')";
-
+		background-color:transparent;
+		display:block;
 		.layout{
 			
 			min-width:80%;
@@ -430,7 +436,8 @@ header{
 	background-repeat: no-repeat;
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-sm.jpg', sizingMethod='scale');
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-sm.jpg', sizingMethod='scale')";
-	
+	background-color:transparent;
+	display:block;
 	@include at-breakpoint($medium){
 		@include background(
 			linear-gradient(bottom left,rgba($blue,0.3),rgba($darkerblue,0.8)),
@@ -441,6 +448,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-md.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-md.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 
 	@include at-breakpoint($medium){
@@ -453,6 +462,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-lg.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/zero-v1.1-lg.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 
 	.layout{
@@ -513,7 +524,8 @@ header{
 	z-index: 100;
     top: 0;
     display:none;
-
+	background-color:transparent;
+		
     i{
     	display:block!important;
     	font-size:3em;
@@ -543,7 +555,8 @@ header{
 	background-repeat: no-repeat;
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-sm.jpg', sizingMethod='scale');
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-sm.jpg', sizingMethod='scale')";
-	
+	background-color:transparent;
+	display:block;
 	@include at-breakpoint($medium){
 		@include background(
 			linear-gradient(bottom left,rgba(darken($red,20),0.5),rgba($cyan,0.5)),
@@ -554,6 +567,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-md.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-md.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 	
 	@include at-breakpoint($large){
@@ -566,7 +581,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-lg.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/abstract-shining-lg.jpg', sizingMethod='scale')";
-
+		background-color:transparent;
+		display:block;
 		.layout{
 			
 			min-width:80%;
@@ -1055,7 +1071,8 @@ header{
 	padding-bottom:5em;
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-sm.jpg', sizingMethod='scale');
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-sm.jpg', sizingMethod='scale')";
-
+	background-color:transparent;
+	display:block;
 	@include at-breakpoint($medium){
 		@include background(
 			linear-gradient(bottom left,rgba($orange,0.5),rgba($blue,0.5)),
@@ -1065,7 +1082,9 @@ header{
 		background-position:50% 50%;
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-md.jpg', sizingMethod='scale');
-	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-md.jpg', sizingMethod='scale')";
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-md.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 
 	@include at-breakpoint($large){
@@ -1077,7 +1096,9 @@ header{
 		background-position:50% 50%;
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-lg.jpg', sizingMethod='scale');
-	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-lg.jpg', sizingMethod='scale')";
+		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/nyc-v1-lg.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 
 	.layout{
@@ -1189,6 +1210,8 @@ header{
 	background-repeat: no-repeat;
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-sm.jpg', sizingMethod='scale');
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-sm.jpg', sizingMethod='scale')";
+	background-color:transparent;
+	display:block;
 	
 	@include at-breakpoint($medium){
 		@include background(
@@ -1200,6 +1223,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-md.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-md.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 	
 	@include at-breakpoint($large){
@@ -1212,6 +1237,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-lg.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/coffee-paleyellow-lg.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 
 	h2{
@@ -1262,7 +1289,9 @@ header{
 	background-repeat: no-repeat;
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-sm.jpg', sizingMethod='scale');
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-sm.jpg', sizingMethod='scale')";
-	
+	background-color:transparent;
+	display:block;
+
 	@include at-breakpoint($medium){
 		@include background(
 			linear-gradient(bottom left,rgba(black,0.9),rgba($darkerblue,0.9)),
@@ -1273,6 +1302,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-md.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-md.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 
 	@include at-breakpoint($large){
@@ -1285,6 +1316,8 @@ header{
 		background-repeat: no-repeat;
 		filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-lg.jpg', sizingMethod='scale');
 		-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='misc/snow-lg.jpg', sizingMethod='scale')";
+		background-color:transparent;
+		display:block;
 	}
 
 	h2{
@@ -1364,7 +1397,9 @@ header{
 	background-repeat: no-repeat;
 	position:relative;
 	min-height:500px;
-
+	background-color:transparent;
+	display:block;
+	
 	@include at-breakpoint($medium){
 		@include background(
 			linear-gradient(bottom left,rgba($blue,0.5),rgba($cyan,0.6)),
@@ -1373,6 +1408,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		background-color:transparent;
+		display:block;
 	}
 	
 	@include at-breakpoint($large){
@@ -1383,6 +1420,8 @@ header{
 		background-size:cover;
 		background-position:50% 50%;
 		background-repeat: no-repeat;
+		background-color:transparent;
+		display:block;
 	}
 
 	.layout{
@@ -1394,7 +1433,7 @@ header{
 		margin:auto;
 		
 		h2{
-			margin:2em 0;
+			margin:2em 0; 
 		}//h2
 	
 		.contact-icons{
