Comment wrapper is now resized -> wrapper size changes according to the display size

--- a/asset/components/sass/_layout.scss
+++ b/asset/components/sass/_layout.scss
@@ -1389,6 +1389,19 @@ header{
 	}//layout
 }//contact
 
+.comment-wrapper{
+	padding:1em;
+
+	@include at-breakpoint($medium){
+		padding:5em;
+	}
+
+	@include at-breakpoint($large){
+		padding:10em;
+	}
+}
+
+
 footer{
 	padding:0.2em 0;
 	color:$darkgray;
