--- a/asset/components/sass/_layout.scss
+++ b/asset/components/sass/_layout.scss
@@ -658,6 +658,10 @@ header{
 			margin:1em 0;
 			position:relative;
 			
+			&:hover{
+				border-color:$blue;
+			}
+			
 			.graph-container{
 				@include border-radius(4px);
 				@include box-shadow($gray 0px 0px 5px);
@@ -666,69 +670,78 @@ header{
 				margin:0 auto;
 				width:100%;
 				height:25px;
+				display:none;
 
-				
-				.familiarity{
-				
-					position:absolute;
-					left:0;
-					top:0;
-					height:100%;
-					padding:0 10px;
-					background-color:lighten($darkblue,30);
-					font-size:0.9em;
-					text-align: center;
-					display:none;
-
+				@include at-breakpoint($large){
+					display:block;
 				}
 
-				.graph-gauge{
+
+				// .familiarity{
 				
-					height:100%;
-					width:100%;
-					background-color:$blue;					
-					@include transition-property(height);
-					@include transition-duration(0.5s);
-  					@include transition-timing-function( cubic-bezier(x1, y1, x2, y2));  					
+				// 	position:absolute;
+				// 	left:0;
+				// 	top:0;
+				// 	height:100%;
+				// 	padding:0 10px;
+				// 	background-color:lighten($darkblue,30);
+				// 	font-size:0.9em;
+				// 	text-align: center;
+				// 	display:none;
 
-				}//graph-gauge
+				// }
+
+				// .graph-gauge{
 				
-				#html,#css,#sass,#firework{
+				// 	height:100%;
+				// 	width:100%;
+				// 	background-color:$blue;					
+				// 	@include transition-property(height);
+				// 	@include transition-duration(0.5s);
+  		// 			@include transition-timing-function( cubic-bezier(x1, y1, x2, y2));  					
 
-					width:80%;
+				// }//graph-gauge
+				
 
-				}//#html,#css,#sass,#firework
+			
 
-				#php,#mySql,#susy,#jquery,#photoshop{
+				// #html,#css,#sass,#firework{
+
+				// 	width:80%;
+
+				// }//#html,#css,#sass,#firework
+
+				// #php,#mySql,#susy,#jquery,#photoshop{
 					
-					width:70%;
+				// 	width:70%;
 
-				}//#php,#mySql,#susy,#jquery,#photoshop
+				// }//#php,#mySql,#susy,#jquery,#photoshop
 
-				#gruntJs,#imagick,#boostrap,#compass,#javascript{
+				// #gruntJs,#imagick,#boostrap,#compass,#javascript{
 					
-					width:60%;
+				// 	width:60%;
 
-				}//#gruntJs,#imagick,#boostrap,#compass,#javascript
+				// }//#gruntJs,#imagick,#boostrap,#compass,#javascript
 
-				#vb,#angular,#nodeJs,#mongoDb{
+				// #vb,#angular,#nodeJs,#mongoDb{
 					
-					width:20%;
+				// 	width:20%;
 
-				}//#vb,#angular,#nodeJs,#mongoDb
+				// }//#vb,#angular,#nodeJs,#mongoDb
 
-				@include at-breakpoint($medium){
-					&:hover{
-						span{
-							display:block;
-						}//span
-					}//hover
-				}//medium size layout
+				// @include at-breakpoint($medium){
+				// 	&:hover{
+				// 		span{
+				// 			display:block;
+				// 		}//span
+				// 	}//hover
+				// }//medium size layout
 			}//graph-container
 
 			.hidden-description{
 				
 				margin-top:1em;
+
 
 				i{
 					position:absolute;
@@ -830,39 +843,41 @@ header{
 						}//span
 					}//graph gauge
 
-					&:hover{
+					// &:hover{
 						
-						#html,#css,#sass,#firework{
-							height:80%;
-						}//#html,#css,#sass,#firework
+					// 	#html,#css,#sass,#firework{
+					// 		height:80%;
+					// 	}//#html,#css,#sass,#firework
 
-						#php,#mySql,#susy,#jquery,#photoshop{
-							height:70%;
-						}//#php,#mySql,#susy,#jquery,#photoshop
+					// 	#php,#mySql,#susy,#jquery,#photoshop{
+					// 		height:70%;
+					// 	}//#php,#mySql,#susy,#jquery,#photoshop
 
-						#gruntJs,#imagick,#boostrap,#compass,#javascript{
-							height:60%;
-						}//#gruntJs,#imagick,#boostrap,#compass,#javascript
+					// 	#gruntJs,#imagick,#boostrap,#compass,#javascript{
+					// 		height:60%;
+					// 	}//#gruntJs,#imagick,#boostrap,#compass,#javascript
 
-						#vb,#angular,#nodeJs,#mongoDb{
-							height:20%;
-							span{
-								color:$darkerblue;
-							}
-						}//#vb,#angular,#nodeJs,#mongoDb							
+					// 	#vb,#angular,#nodeJs,#mongoDb{
+					// 		height:20%;
+					// 		span{
+					// 			color:$darkerblue;
+					// 		}
+					// 	}//#vb,#angular,#nodeJs,#mongoDb							
 					
-					}//hover 
+					// }//hover 
 				}
 
-				&:hover{
+				// &:hover{
 					
-					.graph-container{
 					
-						display:block;
-					
-					}
 
-				}
+				// 	// .graph-container{
+					
+				// 	// 	display:block;
+					
+				// 	// }
+
+				// }
 
 				.level-box{
 					@include border-radius(70px);
