--- a/asset/components/sass/_layout.scss
+++ b/asset/components/sass/_layout.scss
@@ -1088,62 +1088,65 @@ header{
 				
 				display:inline-block;
 				position:relative;
-				@include border-radius(50px);
-				width:12em;
-				margin:1em;
-				position: relative;
 				
-				
-				a{
-					width:100%;
-					height:100%;
-
-					img{
-						
-						@include border-radius(150px);
-						width:100%;
-						height:100%;
-
-					}//img
-
-					.edited{
-						position:absolute;
-						right:0;
-						left:0;
-						top:0;
-						bottom:0;
-						display:none;
-						width:100%;
-						height:100%;
-						margin:auto;
-
-					}//edited
-
-					.popup-slides{
-
-						display:none;
-						width:100%;
-						height:100%;
-						@include border-radius(150px);
-						background-color:rgba(black,0.8);
-						position:absolute;
-						top:0;
-
-					}//popup slides
+				&.larger{
+					width:22em;
+					margin:1em 1em;
 
 					h3{
-
 						height:20%;
 						width:80%;
 						font-size:2em;
-						color:adjust-lightness($cyan,30%);
-						position:absolute;
-						top:0;right:0;bottom:0;left:0;
-						margin:auto;
-						
-					}//h3
+					}
 
-				}//a
+					img{
+					
+						width:100%;
+
+					}//img
+				}
+				
+				&.smaller{
+					height: 19em;
+					background-color:white;
+					margin: 1em 1em;
+
+					h3{
+						height:50%;
+						font-size:1.5em;
+					}
+
+					img{
+					
+						height:100%;
+
+					}//img
+				}
+
+				
+
+
+				.popup-slides{
+					display:none;
+					width:100%;
+					height:100%;
+					background-color:rgba(black,0.8);
+					position:absolute;
+					top:0;
+					left:0;
+					right:0;
+					bottom:0;
+
+				}//popup slides
+
+				h3{
+					width:80%;
+					color:adjust-lightness($cyan,30%);
+					position:absolute;
+					top:0;right:0;bottom:0;left:0;
+					margin:auto;
+					
+				}//h3
 			}//creation
 		}//list of creation
 
